[workspace]
members = ["mue-core", "mue-macros", "mue-macroquad", "examples/basics"]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2021"
repository = "https://github.com/Mivik/mue-core"
rust-version = "1.74.0"

[workspace.dependencies]
macroquad = { git = "https://github.com/Mivik/prpr-macroquad", rev = "df81b76", default-features = false }
miniquad = { git = "https://github.com/Mivik/prpr-miniquad", rev = "0694542" }
nalgebra = "0.33.2"
slotmap = "1.1.1"
smallvec = "1.13.2"
taffy = "0.9.2"

mue-core = { path = "mue-core" }
mue-macros = { path = "mue-macros" }
mue-macroquad = { path = "mue-macroquad" }
