[package]
name = "mue-core"
version = "0.1.0"
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
impl-taffy = ["taffy"]

[dependencies]
slotmap = "1.1.1"
smallvec = "1.15.1"
type-map = "0.5.1"

taffy = { version = "0.9.2", optional = true }
