[package]
name = "mue-core"
version = "0.1.0"
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
impl-taffy = ["taffy"]

[dependencies]
slotmap = { workspace = true }
smallvec = { workspace = true }
type-map = "0.5.1"

taffy = { workspace = true, optional = true }
