[package]
name = "mue-macroquad"
version = "0.1.0"
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
glyph_brush = "0.7.12"
lyon = "1.0.19"
macroquad = { git = "https://github.com/Mivik/prpr-macroquad", rev = "df81b76", default-features = false }
miniquad = { git = "https://github.com/Mivik/prpr-miniquad", rev = "0694542" }
mue-core = { workspace = true, features = ["impl-taffy"] }
mue-macros = { path = "../mue-macros" }
nalgebra = "0.33.2"
paste = "1.0.15"
slotmap = "1.1.1"
smallvec = "1.13.2"
taffy = "0.9.2"
