[package]
name = "mue-macroquad"
version = "0.1.0"
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
glyph_brush = "0.7.12"
lyon = "1.0.19"
macroquad = { git = "https://github.com/Mivik/prpr-macroquad", rev = "df81b76", default-features = false }
miniquad = { git = "https://github.com/Mivik/prpr-miniquad", rev = "0694542" }
mue-core = { workspace = true, features = ["impl-taffy"] }
mue-macros = { workspace = true }
nalgebra = { workspace = true }
paste = "1.0.15"
slotmap = { workspace = true }
smallvec = { workspace = true }
taffy = { workspace = true }
