[package]
name = "basics"
version = "0.1.0"
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
macroquad = { workspace = true }
mue-core = { workspace = true }
mue-macroquad = { workspace = true }
mue-macros = { workspace = true }
taffy = { workspace = true }
